# CSOWeapon

./: CMakeLists.txt  NOTES.md  dllmain.cpp
.github/workflows/: build.yml
include/: frostbite_fix.h  givefnptrs.h  pattern_scan.h
src/: dllmain.cpp  frostbite_fix.cpp  givefnptrs.cpp  givefnptrs.h  hooks.cpp  hooks.h  logger.cpp  logger.h  pattern_scan.cpp
src/hlsdk/: cso_baseweapon.h  mp_offsets.h  sdk.h
src/weapons/: janus1.cpp  janus1.h
